# GutenAIR

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: functional.md  technical.md  user_manual.md
examples/: guardian_demo.rs  repro_br.rs  style_catalog_demo.rs  style_exceptions_demo.rs  test_fix_styles.rs  usage.rs
memory/: MEMORY.md  project_architecture.md  project_sqlite_index.md
src/: block_ids.rs  cleaner.rs  core.rs  error.rs  export.rs  export_custom.rs  formatting.rs  guardian.rs  hooks.rs  index.rs  lib.rs  manifest.rs  metadata.rs  split.rs  stats.rs  toc.rs  types.rs
test_styles_project/OEBPS/: content.opf
test_styles_project/OEBPS/Text/: cap1.xhtml  chap1.xhtml  intro.xhtml  nav.xhtml
